--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
     align-items: center;
     justify-content: center;
     gap: 8px;
-    padding-top: 12px;
+    padding-top: 0;
 }
 .offer-ind {
     background-color: #D9D9D9;
@@ -48,15 +48,20 @@
     height: 4px;
     border-radius: 4px;
 }
+.offer-ind.active {
+    width: 13px;
+    height: 4px;
+    background-color: #D42323;
+}
 .my-cards{
     background-color: #D9D9D9;
     width: 8px;
     height: 8px;
     border-radius: 50%;
 }
-.indicator.active {
-    width: 10px;
-    height: 10px;
+.my-cards.active {
+    width: 8px;
+    height: 8px;
     background-color: #D42323;
 }
 .swiper {
@@ -113,4 +118,9 @@ input[type = 'search']::-webkit-search-cancel-button{
 .control:checked + .toggle::before {
     content: "";
     left: 13px;
+}
+.place-center {
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
